Modify moment.js time format and fix tooltip z-index

--- a/app/assets/stylesheets/message_box/message_item.scss
+++ b/app/assets/stylesheets/message_box/message_item.scss
@@ -40,6 +40,8 @@
 }
 
 .message-header-time {
+  font-size: 12px;
+  line-height: 15px;
   margin-left: 10px;
   color: #72767d;
 }
